a little bit of swagger and reorganize app.py
